; ModuleID = '/home/carl/AnghaBench/libgit2/tests/network/extr_matchhost.c_test_network_matchhost__match.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/network/extr_matchhost.c_test_network_matchhost__match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"*.example.org\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"www.example.org\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"*.foo.example.org\00", align 1
@.str.3 = private unnamed_addr constant [20 x i8] c"www.foo.example.org\00", align 1
@.str.4 = private unnamed_addr constant [16 x i8] c"foo.example.org\00", align 1
@.str.5 = private unnamed_addr constant [12 x i8] c"example.org\00", align 1
@.str.6 = private unnamed_addr constant [25 x i8] c"blah.www.www.example.org\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_network_matchhost__match() #0 {
  %1 = call i32 @gitno__match_host(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %2 = call i32 @cl_git_pass(i32 %1)
  %3 = call i32 @gitno__match_host(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i64 0, i64 0))
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = call i32 @gitno__match_host(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.4, i64 0, i64 0))
  %6 = call i32 @cl_git_fail(i32 %5)
  %7 = call i32 @gitno__match_host(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %8 = call i32 @cl_git_fail(i32 %7)
  %9 = call i32 @gitno__match_host(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.5, i64 0, i64 0))
  %10 = call i32 @cl_git_fail(i32 %9)
  %11 = call i32 @gitno__match_host(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i64 0, i64 0))
  %12 = call i32 @cl_git_fail(i32 %11)
  %13 = call i32 @gitno__match_host(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.6, i64 0, i64 0))
  %14 = call i32 @cl_git_fail(i32 %13)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @gitno__match_host(i8*, i8*) #1

declare dso_local i32 @cl_git_fail(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
